# pico_board_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
Cases/: cosmotyl-caseright.stl  cosmotyl-plateright.stl
Cases/dactyl/: cosmotyl-caseleft.stl  cosmotyl-plateleft.stl
Cases/final/: case_left.FCStd  plate_right.FCStd
left_side/: Cargo.toml  README.md
left_side/src/: main.rs
left_side/src/ble_hid/: mod.rs
left_side/src/hid_helper/: keyboard_report.rs
left_side/src/io_management/: full_keyboard_manager.rs  left_half_manager.rs  mod.rs  right_half_manager.rs
left_side/src/profiles_management/: keyboard_profile.rs  mod.rs
left_side/src/profiles_management/profiles/: profile_1.rs
left_side/src/report_buffer/: buffer.rs
left_side/src/usb_hid/: mod.rs  usb_main.rs
right_side/: Cargo.toml  README.md
right_side/src/: main.rs
right_side/src/io_management/: key_manager.rs
src/: main.rs
src/hid_helper/: keyboard_report.rs  keys.rs  mod.rs
src/io_manager/: manager.rs
src/profiles_management/: keyprofile.rs  keyprofile_helper.rs  mod.rs
src/profiles_management/profiles/: mod.rs  profile_1.rs
src/report_buffer/: buffer.rs
