[package]
name = "keyboard-left"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keyboard-left"
path = "src/main.rs"
test = false
doctest = false
bench = false


[dependencies]

embassy-time = "0.4.0"

embassy-executor = { version = "0.7.0", features = [
     "task-arena-size-98304",
     "arch-cortex-m",
     "executor-thread",
     "executor-interrupt",
     "defmt",
]}

embassy-rp = { version = "0.3.1", features = ["rp2040",
	   "rp2040",
     "defmt",
     "unstable-pac",
     "time-driver",
     "critical-section-impl",
] }

embassy-usb = { version = "0.4.0", features = [
    "defmt"
] }

embassy-sync = { version = "0.6.2", features = [
    "defmt"
] }

embassy-futures = { version = "0.1.1" }

cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }
bt-hci = { version = "0.2", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.1.0", features = ["derive", "scan"] }

usbd-hid = "0.8.2"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
heapless = "0.8.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = 0
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = true
opt-level = "z"

